2do commit quitando boton para nuevo examen

--- a/index.html
+++ b/index.html
@@ -204,10 +204,12 @@
                         <span class="material-icons">visibility</span>
                         Revisar Respuestas
                     </button>
+                    <!-- Botón Nuevo Examen comentado para evitar reintentos
                     <button class="btn btn-secondary" onclick="location.reload()">
                         <span class="material-icons">refresh</span>
                         Nuevo Examen
                     </button>
+                    -->
                 </div>
             </div>
         </section>
