--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                     <div class="form-group">
                         <label for="studentId">
                             <span class="material-icons">fingerprint</span>
-                            Número de Matrícula
+                            Número de Identificación
                         </label>
                         <input type="text" id="studentId" name="studentId" required 
-                               placeholder="Ej: 2024001234" pattern="[0-9]{10}">
+                               placeholder="Ej: 12345678901" pattern="[0-9]{5,11}">
                         <span class="error-message"></span>
                     </div>
                     <div class="form-group">
